# TRB-2027-ContinuesPPO

./: .gitattributes  README.md
TRB/代码/serl-sprl/: .gitignore  .pre-commit-config.yaml  pyproject.toml
TRB/代码/serl-sprl/benchmarks/: best_runs.yml  best_runs_stochastic.yml  generate_plots.py
TRB/代码/serl-sprl/benchmarks/ems/: baseline.py  common.py
TRB/代码/serl-sprl/benchmarks/ems/a2c/: serl_a2c_vanilla.py  sprl_a2c_vanilla.py
TRB/代码/serl-sprl/benchmarks/ems/ppo/: serl_ppo_vanilla.py  sprl_ppo_vanilla.py
TRB/代码/serl-sprl/benchmarks/ems/td3/: serl_td3_penalty.py  serl_td3_vanilla.py  sprl_td3_penalty_critic.py  sprl_td3_psl.py  sprl_td3_vanilla.py
TRB/代码/serl-sprl/benchmarks/pendulum/: baseline.py  common.py
TRB/代码/serl-sprl/benchmarks/pendulum/a2c/: serl_a2c_penalty.py  serl_a2c_vanilla.py  sprl_a2c_penalty_critic.py  sprl_a2c_psl.py  sprl_a2c_vanilla.py
TRB/代码/serl-sprl/benchmarks/quadrotor/: common.py
TRB/代码/serl-sprl/benchmarks/seeker/: common.py
TRB/代码/serl-sprl/serl_sprl/: sets.py
TRB/代码/serl-sprl/serl_sprl/benchmarking/: base.py  environments.py
TRB/代码/serl-sprl/serl_sprl/envs/: configs.py  safe_region.py
TRB/代码/serl-sprl/serl_sprl/envs/seeker/: __init__.py  (+3 more)
TRB/代码/serl-sprl/serl_sprl/projection/: base.py  projection_helpers.py  projection_wrappers.py
TRB/代码/serl-sprl/serl_sprl/sb3_contrib/: algorithm_configs.py  buffers.py  callbacks.py  common.py  distributions.py  helpers.py  noise.py  serl_policies.py  sprl_policies.py
TRB/代码/serl-sprl/serl_sprl/visualization_densities/: density_vis_quad.ipynb  density_vis_zonotopes.ipynb  helpers.py
(+2295 files in other folders)
